tests/snapshots/examples_fixtures/ModuleGraph__ConstStringOrdering.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/ConstStringOrdering.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ModuleGraph.ConstStringOrdering` doesn't match file path `examples/ModuleGraph/ConstStringOrdering.flx`.

  examples/ModuleGraph/ConstStringOrdering.flx:6:1
  |
6 | module ModuleGraph.ConstStringOrdering {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
